--- a/LetsGoBlack/www/index.html
+++ b/LetsGoBlack/www/index.html
@@ -42,8 +42,8 @@
   <body ng-app="starter">
 
     <ion-pane>
-      <ion-header-bar class="bar-stable">
-        <h1 class="title">Ionic Blank Starter</h1>
+      <ion-header-bar class="bar-assertive">
+        <h1 class="title">Lets Go Black!</h1>
       </ion-header-bar>
       <ion-content>
       </ion-content>
