--- a/LetsGoBlack/www/index.html
+++ b/LetsGoBlack/www/index.html
@@ -42,12 +42,12 @@
   <body ng-app="starter" animation="slide-left-right-ios7">
     <!-- 
       The nav bar that will be updated as we navigate between views.
-    -->
+    
     <ion-nav-bar class="bar-assertive nav-title-slide-ios7 bar-asseritve">
       <ion-nav-back-button class="button-icon icon ion-chevron-left">
         Back
       </ion-nav-back-button>
-    </ion-nav-bar>
+    </ion-nav-bar>-->
     <!-- 
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
