--- a/LetsGoBlack/www/index.html
+++ b/LetsGoBlack/www/index.html
@@ -34,21 +34,23 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
-     <script src="js/controllers.js"></script>
+    <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
   </head>
   <body ng-app="starter" animation="slide-left-right-ios7">
-    <!-- 
+    <!--
       The nav bar that will be updated as we navigate between views.
-    
+
     <ion-nav-bar class="bar-assertive nav-title-slide-ios7 bar-asseritve">
       <ion-nav-back-button class="button-icon icon ion-chevron-left">
         Back
       </ion-nav-back-button>
     </ion-nav-bar>-->
-    <!-- 
+    <!--
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
       have templates inline in this html file if you'd like).
