--- a/LetsGoBlack/www/index.html
+++ b/LetsGoBlack/www/index.html
@@ -16,7 +16,11 @@
       }
     </script>-->
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -35,11 +39,15 @@
     <script src="cordova.js"></script>
 
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+
   </head>
   <body ng-app="starter" animation="slide-left-right-ios7">
     <!--
