fix sign up and trip setup

--- a/LetsGoBlack/www/index.html
+++ b/LetsGoBlack/www/index.html
@@ -22,7 +22,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="https://checkout.stripe.com/v3/checkout/button.css"></link>
+    <link rel="stylesheet" href="https://checkout.stripe.com/v3/checkout/button.css">
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
